# bottleneck

./: .cirrus.yml  .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  RELEASE.rst  TODO  appveyor.yml  codecov.yml  ez_setup.py  meson.build  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  setup_c_rewrite.py  tox.ini  versioneer.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/bottleneck-action/: action.yml
.github/workflows/: ci.yml  pythonpackage.yml
LICENSES/: NUMPY_LICENSE  SCIPY_LICENSE
asv_bench/: asv.conf.json
asv_bench/benchmarks/: memory.py  move.py  nonreduce.py  nonreduce_axis.py  reduce.py
bottleneck/: .gitignore  LICENSE  __init__.py  _pytesttester.py  _version.py  conftest.py  threads.py  util.py  version.py
bottleneck/bench/: bench.py
bottleneck/benchmark/: autotimeit.py  bench.py  bench2.py  bench_detailed.py
bottleneck/csrc/: makefile  move_median.c  move_median.h
bottleneck/include/: bn_config.h  bottleneck.h  iterators.h
bottleneck/slow/: __init__.py  func.py  group.py  move.py  nonreduce.py  nonreduce_axis.py  reduce.py
bottleneck/src/: .gitignore  Makefile  bn_config.h  bn_config.py  bn_template.py  bottleneck.h  iterators.h  makepyx.py  move2_template.c  move_quantile.py  move_template.c  nonreduce.c.template  nonreduce2_template.c  nonreduce_axis.c.template  nonreduce_axis2_template.c  nonreduce_axis_template.c  nonreduce_template.c  reduce.c.template  reduce.pyx  reduce2.c  reduce2.pyx  reduce2_setup.py  reduce2_template.c  reduce3.pyx  reduce3_setup.py  reduce_setup.py  reduce_template.c  slow.c  slow.h  template.py
bottleneck/src/auto_pyx/: .gitignore  move.c  move_setup.py  nonreduce.c  nonreduce.pyx  nonreduce_axis.c  nonreduce_axis_setup.py  nonreduce_setup.py  reduce.c  reduce.pyx  reduce_setup.py  reduce_target.pyx
bottleneck/src/auto_pyx/csrc/: makefile  mm.c  move_median.c  move_median.h  move_median_debug.c  move_nanmedian.c
bottleneck/src/func/: .gitignore  func.c  func.pyx  func_header.pyx  header.pyx  max.pyx  mean.pyx  median.pyx  min.pyx  nanargmax.pyx  nanargmin.pyx  nanmax.pyx  nanmean.pyx  nanmedian.pyx  nanmin.pyx  nanstd.pyx  nansum.pyx  nanvar.pyx  setup.py  ss.pyx  std.pyx  sum.pyx  var.pyx
bottleneck/src/func/64bit/: .gitignore
bottleneck/src/group/: .gitignore  group.c  group.pyx  group_header.pyx  group_mapper.pyx  group_mean.pyx  group_nanmean.pyx  setup.py
bottleneck/src/move/: .gitignore  move.c  move.pyx  move_header.pyx  move_max.pyx  move_mean.pyx  move_min.pyx  move_nanmax.pyx  move_nanmean.pyx  move_nanmin.pyx  move_nanstd.pyx  move_nansum.pyx  move_std.pyx  move_sum.pyx  setup.py
bottleneck/src/move/csrc/: move_median.c
bottleneck/src/move_median/: makefile  move_median.c  move_median.h  move_median_debug.c
bottleneck/src/template/: move.pyx  nonreduce.pyx  nonreduce_axis.pyx  reduce.py  reduce.pyx  template.py
bottleneck/src/template/func/: allnan.py  anynan.py  argpartsort.py  func.py  median.py  nanargmax.py  nanargmin.py  nanmax.py  nanmean.py  nanmedian.py  nanmin.py  nanrankdata.py  nanstd.py  nansum.py  nanvar.py  nn.py  partsort.py  rankdata.py  replace.py  ss.py
bottleneck/src/template/group/: group.py  group_nanmean.py
bottleneck/src/template/move/: move.py  move_max.py  move_mean.py  move_median.py  move_min.py  move_nanmax.py  move_nanmean.py  move_nanmin.py  move_nanstd.py  (+3 more)
bottleneck/template/: debug.py  move.pyx  nonreduce.pyx  nonreduce_axis.pyx  reduce.pyx  reduce2.c  reduce2.pyx  reduce3.pyx  setup.py  slow.h  template.py
bottleneck/testing/: group_validator.py  move_validators.py
bottleneck/tests/: common.py  fast_test.py  func_test.py  functions.py  group_test.py  input_modifcation_test.py  input_modification_test.py  list_input_test.py  memory_test.py  move_test.py  nonreduce_axis_test.py  nonreduce_test.py  partsort_OFF.py  partsort_test.py  reduce_test.py  replace_test.py  scalar_input_test.py  test_template.py  util.py
bottleneck/tests/docker/: release_tests.sh
build_helpers/: config.py  get_numpy_include_dir.py  template.py
build_helpers/tests/: test_template.py
ci/travis/: bn_setup.sh  conda_install.sh  conda_setup.sh
doc/: Makefile  doc_howto
doc/image/: icon.xcf
doc/source/: .gitignore  bottleneck.benchmark.rst  bottleneck.move.rst  bottleneck.nonreduce.rst  bottleneck.nonreduce_axis.rst  bottleneck.reduce.rst  bottleneck.rst  bottleneck.slow.rst  bottleneck.src.rst  bottleneck.tests.rst  conf.py  development.rst  index.rst  installing.rst  intro.rst  license.rst  reference.rst  release.rst
doc/source/_templates/: layout.html
doc/source/releases/: RELEASE.rst  v0.1.0.rst  v0.2.0.rst  v0.3.0.rst  v0.4.0.rst  v0.4.1.rst  v0.4.2.rst  v0.4.3.rst  v0.5.0.rst  v0.6.0.rst  v0.7.0.rst  v0.8.0.rst  v1.0.0.rst  v1.1.0.rst  v1.2.0.rst  v1.2.1.rst  v1.3.0.rst  v1.3.1.rst  v1.3.2.rst  v1.4.0.rst
doc/sphinxext/: PKG-INFO  announce.py  contributors.py  docscrape.py  phantom_import.py  plot_directive.py  setup.py
dsna/: __init__.py  version.py
dsna/bench/: bench.py
dsna/src/: Makefile  func.c  header.pyx  max.pyx  min.pyx  nanmax.pyx  nanmean.pyx  nanmin.pyx  nansum.pyx  setup.py
dsna/src/func/: func.c  max.pyx  mean.pyx  min.pyx  setup.py  std.pyx  sum.pyx  var.pyx
dsna/src/group/: group.c  group.pyx  group_mapper.pyx  group_mean.pyx  setup.py
dsna/src/move/: move.c  move.pyx  move_header.pyx  move_sum.pyx  setup.py
dsna/tests/: func_test.py  group_test.py  move_test.py  nanfunc_test.py
nanny/: __init__.py  version.py
nanny/bench/: autotimeit.py  bench.py
nanny/src/: Makefile  func.c  func.pyx  header.pyx  nanmax.pyx  nanmean.pyx  nanmin.pyx  nanstd.pyx  nansum.c  nansum.pyx  nanvar.pyx  setup.py
nanny/tests/: nanfunc_test.py
sandbox/: nanmean.pyx  rewrite.html  rewrite.pyx  setup.py
tools/: test-installed-bottleneck.py  update_readme.py
tools/appveyor/: conda_manager.py  conda_setup.py  conda_wrapper.py  windows_sdk.cmd
tools/travis/: bn_setup.sh  conda_install.sh  conda_setup.sh
(+5 files in other folders)
