[build-system]
requires = [
    "setuptools",
    "versioneer[toml]>=0.29", 
    # Comments on numpy build requirement range:
    #
    #   1. >=2.0.x is the numpy requirement for wheel builds for distribution
    #      on PyPI - building against 2.x yields wheels that are also
    #      ABI-compatible with numpy 1.x at runtime.
    #   2. Note that building against numpy 1.x works fine too - users and
    #      redistributors can do this by installing the numpy version they like
    #      and disabling build isolation.
    #   3. The <2.(N+3) upper bound is for matching the numpy deprecation policy,
    #      it should not be loosened more than that.
    "numpy>=2,<2.6"
]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "bottleneck/_version.py"
versionfile_build = "bottleneck/_version.py"
tag_prefix = "v"
parentdir_prefix = "bottleneck-"

[tool.pytest.ini_options]
addopts = "-l"
filterwarnings = ["error"]
