[build-system]
# keep in sync with dependency-groups
requires = [
    "meson-python>=0.18.0",
    # Comments on numpy build requirement range:
    #
    #   1. >=2.0.x is the numpy requirement for wheel builds for distribution
    #      on PyPI - building against 2.x yields wheels that are also
    #      ABI-compatible with numpy 1.x at runtime.
    #   2. Note that building against numpy 1.x works fine too - users and
    #      redistributors can do this by installing the numpy version they like
    #      and disabling build isolation.
    #   3. The <2.(N+3) upper bound is for matching the numpy deprecation policy,
    #      it should not be loosened more than that.
    "numpy>=2,<2.6"
]
build-backend = "mesonpy"

[project]
name = "Bottleneck"
version = "1.7.0.dev0"
description = "Fast NumPy array functions written in C"
maintainers = [
    { name = "Christopher Whelan" , email = "bottle-neck@googlegroups.com" },
]
readme = { file = "README.rst" , content-type = "text/x-rst" }
license = "BSD-2-Clause"
license-files = [
    "LICENSE",
    "LICENSES/NUMPY_LICENSE",
    "LICENSES/PANDAS_LICENSE",
    "LICENSES/SCIPY_LICENSE",
    "LICENSES/SETUPTOOLS_LICENSE",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading :: 2 - Beta",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    # keep in sync with NPY_* macros (meson.build)
    "numpy>=1.21.3",
]

[project.urls]
Repository = "https://github.com/pydata/bottleneck"
Changelog = "https://github.com/pydata/bottleneck/blob/master/RELEASE.rst"

[dependency-groups]
# For convenience, the dev group contains build time requirements because
# - meson-python supports editable installs or build isolation, but not both
# - uv special cases this group name and includes it by default via uv sync
#
# Combined with no-build-isolation set in [tool.uv],
# this allows to bootstrap an editable in just two simple steps:
# uv sync --only-dev && uv sync
#
# This could be simplified/reunifed depending on what happens on the following
# upstream issue
# https://github.com/astral-sh/uv/issues/7052
#
# ninja is a system level requirement to meson-python
# it is automatically obtained from PyPI if lacking at the system level
# when building a package in isolation, which is why it's not listed
# under build-system requires.
dev = [
    "meson-python>=0.18.0",
    "ninja>=1.11.1.3",
    "numpy>=2.0.0, <2.6",
]
doc = [
    "numpydoc",
    "sphinx",
    "gitpython",
]
test = [
    "pytest>=8.0.0",
]
concurrency = [
    { include-group = "test" },
    "pytest-run-parallel>=0.9.0",
]

[tool.meson-python]
# disallow limited-api builds by default
# - users building from source generally do not need portable binaries
# - this is overridden in the cibuildwheel section
limited-api = true
args.setup = ['-Dpython.allow_limited_api=false']

[tool.versioneer]
VCS = "git"
style = "pep440-pre"
versionfile_source = "bottleneck/_version.py"
versionfile_build = "bottleneck/_version.py"
tag_prefix = "v"
parentdir_prefix = "bottleneck-"

[tool.pytest.ini_options]
addopts = "-l"
filterwarnings = ["error"]

[tool.cibuildwheel]
build-frontend = "uv; args: --no-config"
config-settings = { setup-args = ["-Dpython.allow_limited_api=true"] }
skip = [
    "*_i686",
    "cp310-win_arm64", # no numpy wheels for this target
]

[[tool.cibuildwheel.overrides]]
# CPython 3.14 predates PEP 803
select = "cp314t-*"
config-settings = { setup-args = ["-Dpython.allow_limited_api=false"] }

[[tool.cibuildwheel.overrides]]
# adapted from numpy
select = "*win_arm64*"
config-settings = { build-dir = "build" , setup-args = ["--vsenv", "-Dpython.allow_limited_api=true"] }

[[tool.cibuildwheel.overrides]]
# cibw's override system is not flexible enough to inherit *nested*
# config items, so instead we need to repeat every other overlapping
# overrides here.
select = "cp314t-*win_arm64*"
config-settings = { build-dir = "build" , setup-args = ["--vsenv", "-Dpython.allow_limited_api=false"] }

[tool.ruff]
exclude = [
    "doc",
    "versioneer.py",
    "bottleneck/_version.py",
    "build",
]

[tool.ruff.lint]
ignore = [
    # "E501"
    #"E203",  # Defer to how black formats
    "C408",  # Unnecessary dict call - rewrite as a literal.
]
select = [
    "E",
    "F",
    "W",
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "TCH", # flake8-type-checking
    "YTT", # flake8-2020
    "I",   # isort
    "UP",  # pyupgrade
    "NPY", # numpy specific rules
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
